--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,4 +1,4 @@
-name: frontend CI workflow
+name: Frontend CI workflow
 
 env:
   REACT_APP_MOVIE_API_URL: http://localhost:5000
@@ -12,7 +12,7 @@ on:
 
 jobs:
   lint:
-    name: code lint check
+    name: Code lint check
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -35,7 +35,7 @@ jobs:
         # This will fail the job if ESLint finds any errors
 
   test:
-    name: unit test
+    name: Unit test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -59,14 +59,14 @@ jobs:
         # Without CI=true, tests would run in watch mode, waiting for file changes and not exiting
 
   build:
-    name: build if tests and lint pass
+    name: Build if tests and lint pass
     runs-on: ubuntu-latest
     needs: [lint, test]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3 
 
-      - name: build docker image
+      - name: Build docker image
         run: |
           cd starter/frontend
           docker build --build-arg=REACT_APP_MOVIE_API_URL --tag=mp-frontend:latest .
