--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -19,6 +19,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
          python-version: '3.10'
+
+      - name: Install pipenv
+        run: pip install pipenv
      
       - name: Install dependencies
         run: |
@@ -42,6 +45,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+
+      - name: Install pipenv
+        run: pip install pipenv
 
       - name: Install dependencies
         run: |
