--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -5,7 +5,7 @@ on:
     pull_request: 
       branches: [main] # only PRs targeting the main branch
       paths:
-        - 'starter/backend/**' # only when frontend files are changed
+        - 'starter/backend/**' # only when backend files are changed
 
 jobs:
   lint:
@@ -67,25 +67,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-         python-version: '3.10'
-
-      - name: Install pipenv
-        run: pip install pipenv
-     
-      - name: Install dependencies
-        run: |
-          cd starter/backend
-          pipenv install
-          
-      - name: Install dependencies
-        run: |
-          cd starter/backend
-          pipenv install
 
       - name: Build
         run: |
