--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -6,6 +6,11 @@ on:
     branches: [ main ]
     paths:
       - 'starter/frontend/**'
+  workflow_run:
+    workflows: ["Backend CD workflow"]  
+    types:
+      - completed
+    branches: [main]
 
 jobs:
   test:
@@ -57,7 +62,7 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           cd starter/frontend
-          docker build --build-arg=REACT_APP_MOVIE_API_URL=http://a9b7c8c47387144609d1ca70daa63f85-775668749.us-east-1.elb.amazonaws.com --tag=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build --build-arg=REACT_APP_MOVIE_API_URL=http://backend --tag=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
           
